style.css
/* ... */
    .page-header .entry-sub-title span {
      margin: 0 5px; }
      .page-header .entry-sub-title span a {
        color: #3b3b3b; }
        .page-header .entry-sub-title span a:hover {
          color: #0191BC; }

.has-post-thumbnail .entry-thumbnail,
.widget_featured_posts_block .entry-thumbnail {
  position: relative;
  margin: 0; }
  .has-post-thumbnail .entry-thumbnail img,
  .widget_featured_posts_block .entry-thumbnail img {
    width: 100%; }
  .has-post-thumbnail .entry-thumbnail .posted-on,
  .widget_featured_posts_block .entry-thumbnail .posted-on {
    background: #333 none repeat scroll 0 0;
    left: 0;
    padding: 10px 0;
    position: absolute;
    text-align: center;
    top: 0;
    width: 110px;
    color: #ffffff;
    font-size: 14px;
    font-style: normal;
    font-weight: 400;
    line-height: 24px;
    text-transform: uppercase;
    display: block;
    -webkit-transition: background 0.3s ease;
    -o-transition: background 0.3s ease;
    transition: background 0.3s ease; }
    .has-post-thumbnail .entry-thumbnail .posted-on a,
    .widget_featured_posts_block .entry-thumbnail .posted-on a {
      color: #ffffff;
      font-size: 14px;
      font-style: normal;
      font-weight: 400;
      line-height: 24px;
      text-transform: uppercase;
      display: block; }
    .has-post-thumbnail .entry-thumbnail .posted-on:hover,
    .widget_featured_posts_block .entry-thumbnail .posted-on:hover {
      background: #00a9e0 none repeat scroll 0 0; }

.entry-title {
  font-size: 18px;
  line-height: 24px;
  margin: 10px 0 5px;
  text-transform: uppercase; }
  .entry-title a {
    color: #454545; }

.has-post-thumbnail .entry-title {
  margin-top: 30px; }

.entry-title a:hover,
.entry-btn .btn:hover,
.entry-meta a:hover {
  color: #00a9e0; }

.entry-meta span {
  border-left: 2px solid #b5b5b5;
  display: inline-block;
  line-height: 15px;
  margin: 10px 10px 10px 0;
  padding-left: 10px; }
  .entry-meta span a,
  .entry-meta span i {
    color: #787878;
    font-size: 11px;
    font-weight: 600; }
  .entry-meta span i {
    margin-right: 5px; }

.entry-meta span:first-child {
  border-left: none;
  margin-left: 0px;
  padding-left: 0px; }

article {
  border-top: 1px solid #e4e4e4;
  margin-top: 40px;
  padding-top: 40px; }

article:first-child {
  border-top: none;
  margin-top: 0px;
  padding-top: 0px; }

.entry-btn .btn {
  color: #7f7d7d;
  font-size: 13px;
  margin-top: 10px; }

article .entry-content {
  color: #7f7d7d;
  margin-top: 22px; }

.entry-thumbnail .posted-on {
  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
  display: block;
  position: static;
  width: 100%;
  text-align: left;
  font-style: normal; }
  .entry-thumbnail .posted-on a {
    color: #333;
    font-weight: 600;
    width: 100%; }

.wp-pagenavi a:hover,
.wp-pagenavi span.current {
  background: #00a9e0 none repeat scroll 0 0;
  border-color: #00a9e0;
  color: #fff;
  padding: 4px 10px; }

.wp-pagenavi {
  margin-left: 3%; }

.wp-pagenavi a,
.wp-pagenavi span {
  padding: 3px 10px; }

.wp-pagenavi .pages {
  color: #8c8c8c; }

.author-box {
  background: #f1f1f1;
  padding: 20px; }
  .author-box .author-img {
    float: left; }
  .author-box .author-description-wrapper {
    margin-left: 120px; }
    .author-box .author-description-wrapper .author-name {
      clear: none; }

/*--------------------------------------------------------------
    Archive Grid layout
--------------------------------------------------------------*/
.archive-grid .entry-thumbnail .posted-on {
  padding: 0 20px; }

.archive-grid #main {
  margin-top: 30px; }

.archive-grid #primary {
  margin-left: -3%;
  width: 74.5%; }

.archive-grid .entry-thumbnail {
  text-align: center; }

.archive-grid article {
  border: 1px solid #e1e1e1;
  display: inline-block;
  margin: 0 -4px 30px 3%;
  vertical-align: top;
  width: 47%;
  margin-top: 0 !important;
  padding: 0; }

.archive-grid .entry-title {
  margin: 30px 0 0;
  padding: 0 20px; }

.archive-grid .entry-title,
.archive-grid .entry-content-text-wrapper {
  padding: 0 20px 20px; }

.post-navigation {
  margin-bottom: 30px; }

.related-posts-main-title {
  margin-top: 30px; }

ul.wp-block-gallery {
  margin: 0; }

/*--------------------------------------------------------------
## products
--------------------------------------------------------------*/
.woocommerce-page ul.products li.product {
  padding: 0;
  text-align: center; }
  .woocommerce-page ul.products li.product .products-img {
    margin: 0;
    padding: 0;
    border: 1px solid #e1e1e1;
    text-align: center;
    position: relative; }
    .woocommerce-page ul.products li.product .products-img img {
      display: block;
      margin: 0; }
    .woocommerce-page ul.products li.product .products-img .products-hover-wrapper {
      background: rgba(0, 0, 0, 0.6) none repeat scroll 0 0;
      height: 100%;
      left: 0;
      position: absolute;
      top: 0;
      width: 100%;
      z-index: 9;
      opacity: 0;
      visibility: hidden;
      -webkit-transition: all 0.5s ease;
      -o-transition: all 0.5s ease;
      transition: all 0.5s ease; }
      .woocommerce-page ul.products li.product .products-img .products-hover-wrapper .products-hover-block {
        position: absolute;
        left: 0;
        top: 52%;
        -webkit-transform: translateY(-50%);
            -ms-transform: translateY(-50%);
                transform: translateY(-50%);
        text-align: center;
        width: 100%;
        -webkit-transition: all 0.5s ease;
        -o-transition: all 0.5s ease;
        transition: all 0.5s ease;
        opacity: 0;
        visibility: hidden; }
/* ... */

